--- a/Laboratorio.Infra.Data/Laboratorio.Infra.Data.csproj
+++ b/Laboratorio.Infra.Data/Laboratorio.Infra.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{461FA170-F0BB-4732-ACF7-37B23D76C6A4}</ProjectGuid>
+    <ProjectGuid>{5CC66C30-B560-4B07-B90C-9F6895019912}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Laboratorio.Domain</RootNamespace>
-    <AssemblyName>Laboratorio.Domain</AssemblyName>
+    <RootNamespace>Laboratorio.Infra.Data</RootNamespace>
+    <AssemblyName>Laboratorio.Infra.Data</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,19 +49,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Atendimento.cs" />
-    <Compile Include="Entities\Cidade.cs" />
-    <Compile Include="Entities\Estado.cs" />
-    <Compile Include="Entities\Exame.cs" />
-    <Compile Include="Entities\ExamesDoAtendimento.cs" />
-    <Compile Include="Entities\Paciente.cs" />
-    <Compile Include="Entities\PlanoDeSaude.cs" />
-    <Compile Include="Entities\TipoConveniado.cs" />
+    <Compile Include="Contexto\LaboratorioContexto.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <Folder Include="EntityConfig\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Laboratorio.Domain\Laboratorio.Domain.csproj">
+      <Project>{461fa170-f0bb-4732-acf7-37b23d76c6a4}</Project>
+      <Name>Laboratorio.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
