--- a/Laboratorio.MVC/Laboratorio.MVC.csproj
+++ b/Laboratorio.MVC/Laboratorio.MVC.csproj
@@ -94,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CidadeController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PacienteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -102,6 +105,19 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="Views\Cidade\_ListarCidades.cshtml" />
+    <Content Include="Views\Cidade\_ListarCidadesNoCLiente.cshtml" />
+    <Content Include="Views\Cidade\Editar.cshtml" />
+    <Content Include="Views\Cidade\Excluir.cshtml" />
+    <Content Include="Views\Cidade\Listar.cshtml" />
+    <Content Include="Views\Cidade\ListarComFiltroPorEstado.cshtml" />
+    <Content Include="Views\Cidade\Novo.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Paciente\_ListarPacientes.cshtml" />
+    <Content Include="Views\Paciente\Editar.cshtml" />
+    <Content Include="Views\Paciente\Listar.cshtml" />
+    <Content Include="Views\Paciente\ListarPorPlano.cshtml" />
+    <Content Include="Views\Paciente\Novo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -111,7 +127,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
