--- a/Laboratorio.Infra.Data/Laboratorio.Infra.Data.csproj
+++ b/Laboratorio.Infra.Data/Laboratorio.Infra.Data.csproj
@@ -50,11 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexto\LaboratorioContexto.cs" />
+    <Compile Include="EntityConfig\PacienteConfiguration.cs" />
+    <Compile Include="EntityConfig\PlanoDeSaudeConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="EntityConfig\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
