--- a/AtendimentoHospitalar/AtendimentoHospitalar.csproj
+++ b/AtendimentoHospitalar/AtendimentoHospitalar.csproj
@@ -105,6 +105,8 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Contexto\AtendimentoHospitalarContexto.cs" />
+    <Compile Include="EntityConfig\AtendimentoConfiguration.cs" />
+    <Compile Include="EntityConfig\ExamesDoAtendimentoConfiguration.cs" />
     <Compile Include="EntityConfig\PacienteConfiguration.cs" />
     <Compile Include="EntityConfig\PlanoDeSaudeConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
