--- a/AtendimentoHospitalar/AtendimentoHospitalar.csproj
+++ b/AtendimentoHospitalar/AtendimentoHospitalar.csproj
@@ -128,10 +128,12 @@
     <Compile Include="Models\PlanoDeSaude.cs" />
     <Compile Include="Models\TipoConveniado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ADO\CidadeAdoRepository.cs" />
+    <Compile Include="Repository\ADO\Conexao.cs" />
+    <Compile Include="Repository\ADO\PacienteAdoRepository.cs" />
+    <Compile Include="Repository\ADO\PlanoSaudeAdoRepository.cs" />
     <Compile Include="Repository\CidadeRepository.cs" />
-    <Compile Include="Repository\Conexao.cs" />
-    <Compile Include="Repository\PacienteRepository.cs" />
-    <Compile Include="Repository\PlanoSaudeRepository.cs" />
+    <Compile Include="Service\CidadeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
