Crud de paciente quase completo

--- a/AtendimentoHospitalar/AtendimentoHospitalar.csproj
+++ b/AtendimentoHospitalar/AtendimentoHospitalar.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Service\ExameDoAtendimentoService.cs" />
     <Compile Include="Service\ExameService.cs" />
     <Compile Include="Service\PacienteService.cs" />
+    <Compile Include="Service\PlanoDeSaudeService.cs" />
     <Compile Include="Service\ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
