--- a/AtendimentoHospitalar/AtendimentoHospitalar.csproj
+++ b/AtendimentoHospitalar/AtendimentoHospitalar.csproj
@@ -128,28 +128,28 @@
     <Compile Include="Models\PlanoDeSaude.cs" />
     <Compile Include="Models\TipoConveniado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ADO\CidadeAdoRepository.cs" />
-    <Compile Include="Repository\ADO\Conexao.cs" />
-    <Compile Include="Repository\ADO\PacienteAdoRepository.cs" />
-    <Compile Include="Repository\ADO\PlanoSaudeAdoRepository.cs" />
-    <Compile Include="Repository\AgendamentoRepository.cs" />
-    <Compile Include="Repository\AtendimentoRepository.cs" />
-    <Compile Include="Repository\CidadeRepository.cs" />
-    <Compile Include="Repository\ExameDaConsultaRepository.cs" />
-    <Compile Include="Repository\ExameDoAtendimentoRepository.cs" />
-    <Compile Include="Repository\ExameRepository.cs" />
-    <Compile Include="Repository\PacienteRepository.cs" />
-    <Compile Include="Repository\PlanoDeSaudeRepository.cs" />
-    <Compile Include="Repository\RepositoryBase.cs" />
-    <Compile Include="Service\AgendamentoService.cs" />
-    <Compile Include="Service\AtendimentoService.cs" />
-    <Compile Include="Service\CidadeService.cs" />
-    <Compile Include="Service\ExameDaConsultaService.cs" />
-    <Compile Include="Service\ExameDoAtendimentoService.cs" />
-    <Compile Include="Service\ExameService.cs" />
-    <Compile Include="Service\PacienteService.cs" />
-    <Compile Include="Service\PlanoDeSaudeService.cs" />
-    <Compile Include="Service\ServiceBase.cs" />
+    <Compile Include="Repositories\ADO\CidadeAdoRepository.cs" />
+    <Compile Include="Repositories\ADO\Conexao.cs" />
+    <Compile Include="Repositories\ADO\PacienteAdoRepository.cs" />
+    <Compile Include="Repositories\ADO\PlanoSaudeAdoRepository.cs" />
+    <Compile Include="Repositories\AgendamentoRepository.cs" />
+    <Compile Include="Repositories\AtendimentoRepository.cs" />
+    <Compile Include="Repositories\CidadeRepository.cs" />
+    <Compile Include="Repositories\ExameDaConsultaRepository.cs" />
+    <Compile Include="Repositories\ExameDoAtendimentoRepository.cs" />
+    <Compile Include="Repositories\ExameRepository.cs" />
+    <Compile Include="Repositories\PacienteRepository.cs" />
+    <Compile Include="Repositories\PlanoDeSaudeRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Services\AgendamentoService.cs" />
+    <Compile Include="Services\AtendimentoService.cs" />
+    <Compile Include="Services\CidadeService.cs" />
+    <Compile Include="Services\ExameDaConsultaService.cs" />
+    <Compile Include="Services\ExameDoAtendimentoService.cs" />
+    <Compile Include="Services\ExameService.cs" />
+    <Compile Include="Services\PacienteService.cs" />
+    <Compile Include="Services\PlanoDeSaudeService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
