--- a/AtendimentoHospitalar/AtendimentoHospitalar.csproj
+++ b/AtendimentoHospitalar/AtendimentoHospitalar.csproj
@@ -94,8 +94,10 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Migrations\DadosIniciais\Cidades.sql" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Migrations\DadosIniciais\Cidades.csv" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
